package AkvpStorage;

message Everything
{
  required bytes sealed_master_secret=1;
  required bytes mac_of_header=2;
  required Header header=3;
  repeated MacdEncdEntry macd_encd_entries=4;
}

message Header
{
//  bytes sealed_private_key=;
//  bytes public_key=;
  required string audit_pub_key_pem=4;
}

message MacdEncdEntry
{
  required bytes hmac=1;
  required string key=2;
  required bytes ivec=3;
  required bytes encd_val=4;
}
